tentando adicionar estilo

--- a/src/app/wish/wish.component.html
+++ b/src/app/wish/wish.component.html
@@ -1,5 +1,6 @@
 <h3>
   Crie seu desejo
+
 </h3>
 <p>
   <label> Nome: </label> <input type="text" name ="descricao"  [(ngModel)]="wish.descricao">
@@ -13,11 +14,11 @@
 </p>
 
 <p>
-  <label> dataIda: </label> <input type="text" name ="dataIda" [(ngModel)]="wish.dataIda" >
+  <label> dataIda: </label> <input type="datetime-local" name ="dataIda" [(ngModel)]="wish.dataIda" >
 </p>
 
 <p>
-  <label> dataVolta: </label> <input type="text" name ="dataVolta" [(ngModel)]="wish.dataVolta">
+  <label> dataVolta: </label> <input type="datetime-local" name ="dataVolta" [(ngModel)]="wish.dataVolta">
 </p>
 
 <p>
