--- a/src/styles.css
+++ b/src/styles.css
@@ -13,3 +13,6 @@ body{
 .col-numero{
   text-align: right;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
