tentando consultar servilço

--- a/src/app/wish/wish.component.html
+++ b/src/app/wish/wish.component.html
@@ -25,3 +25,4 @@
   <label> cotacaoAtual: </label> <input type="text" name ="cotacaoAtual" [(ngModel)]="wish.cotacaoAtual">
 </p>
 
+<button mat-button (click)="salvar($event)">Enviar</button>
